Create Alarm definition endpoint
